--- a/index.html
+++ b/index.html
@@ -1,86 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset = "UTF-8">
-<meta name="viewport" content="width =device_width,initial_scale=1.0">
-<title> Atchaya-web developer </title>
-<link rel ="stylesheet"href="styles.css">
-</head>
+<html>
 <body>
-<header>
- <nav>
-<ul>
-  <li><a href="#home">Home</a></li>
-  <li><a href="#about">About</a></li>
-  <li><a href="#projects">Projects</a></li>
-  <li><a href="#skills">Skills</a></li>
-  <li><a href="#contact">Contact</a></li>
- </ul>
-</nav>
-<div class="hero">
-<h1>Atchaya</h1>
-<p>Full-stack web developer</p>
-<a href="#project"class="btn">view my work</a>
-</div>
-</header>
-<!--ABOUT SECTION-->
-<section id="about">
-<h2>About me</h2>
-<p>Iam a full stack web developer with a passion for building responsive user friendly websites and web applications</p>
-<!--TIMELINE CONTENT-->
-<section id="projects">
-<h2>Projects</h2>
-<div class="project">
-<h3>E-commerce website</h3>
-<p>A fully responsive e_commerce website built with react,node,js and mongodb</p>
-<a href="#"class="btn">live demo</a>
-<a href="#"class="btn">github</a>
-</div>
-</section>
-<!--SKILLS SECTION-->
-<section id="skills">
-<h2>skills</h2>
-<ul>
-<li>HTML,CSS,javascript,python,SQL</li>
-<li>react,angular,node.js,express</li>
-<li>git,docker,aws,jenkins,webpack</li>
-
-</ul>
-</section>
-<img src="https://th.bing.com/th/id/OIP.fGp1jPCRDUNNTQiM0X3L6QHaGK?w=178&h=180&c=7&r=0&o=5&pid=1.7" alt="Python">
-<img src="https://th.bing.com/th/id/OIP.hG6v403fXEtFUUkC_PUq2QHaKt?w=121&h=180&c=7&r=0&o=5&pid=1.7" alt="CSS">
-<img src="https://th.bing.com/th/id/OIP.kGM0Day_QGGW4335KdqNrAHaHa?w=179&h=180&c=7&r=0&o=5&pid=1.7" alt="HTML">
-<img src="https://th.bing.com/th/id/OIP.u8ur89vj_um76YeSAGzSswHaHa?w=176&h=180&c=7&r=0&o=5&pid=1.7" alt="Javascript">
-<img src="https://th.bing.com/th/id/OIP.FKD2Uy_Q6r6AviZA2VD4RQHaHa?w=179&h=180&c=7&r=0&o=5&pid=1.7" alt="Angular JS">
-<img src="https://th.bing.com/th/id/OIP.85lHXoBtlKkofvwSZ14GUQHaHa?w=185&h=185&c=7&r=0&o=5&pid=1.7" alt="Node JS">
-<!--CONTENT SECTION-->
-<section id="contact">
-<h2>Contact</h2>
-<form>
-<label for="name">Name:</label>
-<input type="text"id="name"name="name"required>
-<label for="email">E-mail:</label>
-<input type="email"id="email"name="email"required>
-<label for="subject">Subject:</label>
-<input type="text"id="subject"name="subject"required>
-<label for="message">Message:</label>
-<input type="message"id="message"name="message"required>
-<button type="submit">Send</button>
- </form>
-   <p>Connect with me:</p>
-        <ul class="social-media">
-            <li><a href="#">LinkedIn</a></li>
-            <li><a href="#">GitHub</a></li>
-            <li><a href="#">Twitter</a></li>
-        </ul>
-    </section>
-    <!-- Footer -->
-    <footer>
-        <p>© 2024 Atchaya. All rights reserved.</p>
-    </footer>
-    <!-- Back to Top Button -->
-    <a href="#home" class="back-to-top">Back to Top</a>
-    <script src="script.js"></script>
+<title>web</title>
+<h1>WELCOME TO MY WEBPAGE</h1>
 </body>
 </html>
-
