--- a/index1.html
+++ b/index1.html
@@ -2,5 +2,7 @@
 <body>
 <title>web</title>
 <h1>WELCOME TO MY WEBPAGE</h1>
+  <p>portfolio
+  <a href="https://atchaya250.github.io/atchaya/portfolio.html">portfolio</a>details</p>
 </body>
 </html>
