--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <h1>WELCOME TO MY WEBPAGE</h1>
   <p>portfolio
   <a href="https://atchaya250.github.io/atchaya/portfolio.html">portfolio</a>details</p>
-  <p>ToDolist<a href="https://atchaya250.github.io/atchaya/app.js/public/views">todolist</a>details</p>
+  <p>ToDolist<a href="https://atchaya250.github.io/atchaya/app.js/index.ejs/style.css">todolist</a>details</p>
 </body>
 </html>
