--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   <p>portfolio
   <a href="https://atchaya250.github.io/atchaya/portfolio.html">portfolio</a>details</p>
   <p>ToDolist<a href="https://atchaya250.github.io/atchaya/app.js">todolist</a>details</p>
+  <script src="app.js"></script>
 </body>
 </html>
