--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1>WELCOME TO MY WEBPAGE</h1>
   <p>portfolio
   <a href="https://atchaya250.github.io/atchaya/portfolio.html">portfolio</a>details</p>
-  <p>ToDolist<a href="https://atchaya250.github.io/atchaya/app.js/index.ejs/style.css">todolist</a>details</p>
+  <p>ToDolist<a href="https://atchaya250.github.io/atchaya/todo.html">todolist</a>details</p>
   <script src="app.js"></script>
 </body>
 </html>
