--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <title>web</title>
 <h1>WELCOME TO MY WEBPAGE</h1>
   <p>portfolio
-  <a href="https://atchaya250.github.io/atchaya/portfolio.html">portfolio</a>details</p>
-  <p>ToDolist<a href="https://atchaya250.github.io/atchaya/todo.html">todolist</a>details</p>
+  <a href="https://atchaya250.github.io/atchaya/portfolio/portfolio.html">portfolio</a>details</p>
+  <p>ToDolist<a href="https://atchaya250.github.io/atchaya/todo/todo.html">todolist</a>details</p>
   <script src="app.js"></script>
 </body>
 </html>
