--- a/todo/todo.html
+++ b/todo/todo.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div class="todo-container">
-        <h2>To-Do List <span>📝</span></h2>
+        <h2>To-Do List </h2>
+        <span>📝</span>
         <form id="task-form">
             <input type="text" id="task-input" placeholder="Add your task">
             <button type="submit">ADD</button>
