--- a/microblogging/micro.html
+++ b/microblogging/micro.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Microblogging App</h1>
     <div id="post-section">
         <h2>Create a Post</h2>
         <textarea id="post-content" placeholder="What's on your mind?"></textarea><br>
