--- a/microblogging/micro.html
+++ b/microblogging/micro.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Microblogging App</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Simple Microblogging App</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Microblogging App</h1>
     <div id="post-section">
         <h2>Create a Post</h2>
         <textarea id="post-content" placeholder="What's on your mind?"></textarea><br>
@@ -22,3 +21,5 @@
     <script src="app.js"></script>
 </body>
 </html>
+
+
