--- a/Fooddelivery/food.html
+++ b/Fooddelivery/food.html
@@ -16,7 +16,7 @@
             <div class="dish">
                 <img src="burger.jpg" alt="Burger">
                 <h2>Burger</h2>
-                <p>$10</p>
+                <p>₹150</p>
                 <p>Delicious beef burger with fresh lettuce and tomatoes.</p>
                 <button onclick="addToCart('Burger', 10)">Add to Cart</button>
             </div>
@@ -24,7 +24,7 @@
             <div class="dish">
                 <img src="pizza.jpg" alt="Pizza">
                 <h2>Pizza</h2>
-                <p>$15</p>
+                <p>₹250</p>
                 <p>Cheesy pizza topped with pepperoni and olives.</p>
                 <button onclick="addToCart('Pizza', 15)">Add to Cart</button>
             </div>
@@ -32,7 +32,7 @@
             <div class="dish">
                 <img src="pasta.jpg" alt="Pasta">
                 <h2>Pasta</h2>
-                <p>$12</p>
+                <p>₹150</p>
                 <p>Creamy pasta with chicken and mushroom sauce.</p>
                 <button onclick="addToCart('Pasta', 12)">Add to Cart</button>
             </div>
@@ -41,7 +41,7 @@
         <section id="cart">
             <h2>Cart</h2>
             <ul id="cartItems"></ul>
-            <p>Total: $<span id="totalPrice">0</span></p>
+            <p>Total: ₹<span id="totalPrice">0</span></p>
             <button onclick="checkout()">Checkout</button>
         </section>
 
