--- a/microblogging/micro.html
+++ b/microblogging/micro.html
@@ -19,4 +19,4 @@
 <div id="user-list"></div>
 
 <!-- Font Awesome for icons -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="style.css">
