--- a/microblogging/micro.html
+++ b/microblogging/micro.html
@@ -28,6 +28,6 @@
             <div id="feed"></div>
         </div>
     </div>
-    <script src="app.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
