--- a/microblogging/micro.html
+++ b/microblogging/micro.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Social Media App</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="style.css"> <!-- Your CSS file -->
+    <link rel="stylesheet" href="style.css"> <!-- Link to your CSS file -->
 </head>
 <body>
     <div id="auth-section">
+        <h2>Welcome to the Social Media App</h2>
         <input type="text" id="username" placeholder="Enter username">
         <button onclick="registerOrLogin()">Login/Register</button>
     </div>
@@ -20,6 +21,6 @@
         <div id="feed"></div>
         <button onclick="logout()">Logout</button>
     </div>
-    <script src="app.js"></script> <!-- Your JS file -->
+    <script src="app.js"></script> <!-- Link to your JavaScript file -->
 </body>
 </html>
