--- a/microblogging/micro.html
+++ b/microblogging/micro.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div id="auth-section">
-        <h2>Welcome to the Social Media App</h2>
+        <h2>Login your Account</h2>
         <input type="text" id="username" placeholder="Enter username">
-        <button onclick="registerOrLogin()">Login/Register</button>
+        <button onclick="registerOrLogin()">Login</button>
     </div>
     <div id="user-section" style="display: none;">
         <h2 id="current-user"></h2>
