--- a/microblogging/micro.html
+++ b/microblogging/micro.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="auth-section">
-        <h2>Login your Account</h2>
+        <h2>Login into your Account</h2>
         <input type="text" id="username" placeholder="Enter username">
         <button onclick="registerOrLogin()">Login</button>
     </div>
