--- a/microblogging/micro.html
+++ b/microblogging/micro.html
@@ -17,6 +17,7 @@
         <h2 id="current-user"></h2>
         <div id="user-list"></div>
         <textarea id="post-content" placeholder="What's on your mind?"></textarea>
+        <input type="file" id="post-image" accept="image/*">
         <button  onclick="createPost()">Post</button>
         <div id="feed"></div>
         <button onclick="logout()">Logout</button>
