--- a/microblogging/micro.html
+++ b/microblogging/micro.html
@@ -13,6 +13,12 @@
         <input type="text" id="username" placeholder="Enter username">
         <button onclick="registerOrLogin()">Login</button>
     </div>
+    <div class="user-list-item">
+    <strong>Username</strong>
+    <button class="follow-btn">
+        <i class="fa fa-user-plus"></i> Follow
+    </button>
+</div>
     <div id="user-section" style="display: none;">
         <h2 id="current-user"></h2>
         <div id="user-list"></div>
