--- a/microblogging/micro.html
+++ b/microblogging/micro.html
@@ -23,6 +23,7 @@
         <div id="feed"></div>
         <button onclick="logout()">Logout</button>
     </div>
+    <button class="follow-btn">+ Follow</button>
     <script src="app.js"></script> <!-- Link to your JavaScript file -->
 </body>
 </html>
