--- a/Fooddelivery/food.html
+++ b/Fooddelivery/food.html
@@ -3,57 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Delivery App</title>
+    <title>Food Delivery Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Food Delivery App</h1>
+        <h1>Food Delivery Service</h1>
     </header>
 
     <main>
-        <section id="menu">
-            <div class="dish">
-                <img src="burger.jpg" alt="Burger">
-                <h2>Burger</h2>
-                <p>₹150</p>
-                <p>Delicious beef burger with fresh lettuce and tomatoes.</p>
-                <button onclick="addToCart('Burger', 150)">Add to Cart</button>
-            </div>
+        <div id="restaurantSelect">
+            <label for="restaurants">Choose a restaurant:</label>
+            <select onchange="loadMenu()" id="restaurants">
+                <option value="">Select a restaurant</option>
+                <option value="Pizza Place">Pizza Place</option>
+                <option value="Burger Joint">Burger Joint</option>
+                <option value="Pasta House">Pasta House</option>
+            </select>
+        </div>
 
-            <div class="dish">
-                <img src="pizza.jpg" alt="Pizza">
-                <h2>Pizza</h2>
-                <p>₹250</p>
-                <p>Cheesy pizza topped with pepperoni and olives.</p>
-                <button onclick="addToCart('Pizza', 250)">Add to Cart</button>
-            </div>
+        <div id="menu"></div>
 
-            <div class="dish">
-                <img src="pasta.jpg" alt="Pasta">
-                <h2>Pasta</h2>
-                <p>₹150</p>
-                <p>Creamy pasta with chicken and mushroom sauce.</p>
-                <button onclick="addToCart('Pasta', 150)">Add to Cart</button>
-            </div>
-        </section>
-
-        <section id="cart">
-            <h2>Cart</h2>
+        <div id="cart">
+            <h2>Your Cart</h2>
             <ul id="cartItems"></ul>
-            <p>Total: ₹<span id="totalPrice">0</span></p>
+            <p id="totalPrice">Total: ₹0</p>
             <button onclick="checkout()">Checkout</button>
-        </section>
+        </div>
 
         <div id="orderConfirmation" class="hidden">
-            <img src="order-placed.jpg" alt="Order Placed">
-            <h2>Your order has been placed successfully!</h2>
-            <button onclick="confirmOrder()">Confirm</button>
+            <h2>Order Confirmation</h2>
+            <p>Your order has been confirmed!</p>
+            <button onclick="confirmOrder()">OK</button>
         </div>
     </main>
+
     <footer>
-      <p>&copy;2024 Food Delivery.All Rights Reserved.</p>
+        <p>&copy; 2024 Food Delivery Service</p>
     </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
