--- a/Fooddelivery/food.html
+++ b/Fooddelivery/food.html
@@ -3,45 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Delivery Website</title>
+    <title>Food Delivery App</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Food Delivery Service</h1>
+        <h1>Food Delivery App</h1>
     </header>
 
     <main>
-        <div id="restaurantSelect">
-            <label for="restaurants">Choose a restaurant:</label>
-            <select onchange="loadMenu()" id="restaurants">
-                <option value="">Select a restaurant</option>
+        <div>
+            <h2>Select a Restaurant</h2>
+            <select id="restaurantSelect" onchange="loadMenu()">
+                <option value="">-- Select a Restaurant --</option>
                 <option value="Pizza Place">Pizza Place</option>
                 <option value="Burger Joint">Burger Joint</option>
                 <option value="Pasta House">Pasta House</option>
+                <option value="Dosa House">Dosa House</option>
+                <option value="Biryani Hub">Biryani Hub</option>
+                <option value="Shawarma Corner">Shawarma Corner</option>
             </select>
         </div>
 
         <div id="menu"></div>
 
         <div id="cart">
-            <h2>Your Cart</h2>
+            <h2>Cart</h2>
             <ul id="cartItems"></ul>
-            <p id="totalPrice">Total: ₹0</p>
-            <button onclick="checkout()">Checkout</button>
-        </div>
-
-        <div id="orderConfirmation" class="hidden">
-            <h2>Order Confirmation</h2>
-            <p>Your order has been confirmed!</p>
-            <button onclick="confirmOrder()">OK</button>
+            <p>Total: ₹<span id="totalPrice">0</span></p>
+            <button id="checkoutBtn" onclick="checkout()">Checkout</button>
         </div>
     </main>
 
-    <footer>
-        <p>&copy; 2024 Food Delivery Service</p>
-    </footer>
+    <div id="orderConfirmation" class="hidden">
+        <img src="success.png" alt="Order Success">
+        <h2>Order Confirmed!</h2>
+        <p>Your delicious meal is on the way!</p>
+        <button onclick="confirmOrder()">Okay</button>
+    </div>
 
-    <script src="script.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
