--- a/Fooddelivery/food.html
+++ b/Fooddelivery/food.html
@@ -42,6 +42,6 @@
         <button onclick="confirmOrder()">Okay</button>
     </div>
 
-    <script src="app.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
