--- a/Fooddelivery/food.html
+++ b/Fooddelivery/food.html
@@ -36,7 +36,7 @@
     </main>
 
     <div id="orderConfirmation" class="hidden">
-        <img src="order-placed.png" alt="Order Success">
+        <img src="order-placed.jpg" alt="Order Success">
         <h2>Order Confirmed!</h2>
         <p>Your delicious meal is on the way!</p>
         <button onclick="confirmOrder()">Okay</button>
