--- a/Fooddelivery/food.html
+++ b/Fooddelivery/food.html
@@ -3,43 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food Delivery App</title>
     <link rel="stylesheet" href="style.css">
+    <title>Food Delivery App</title>
 </head>
 <body>
     <header>
         <h1>Food Delivery App</h1>
+        <nav>
+            <ul>
+                <li id="homeLink" onclick="showHome()">Home</li>
+                <li id="restaurantLink" onclick="showRestaurant()">Restaurant</li>
+                <li id="orderLink" onclick="showOrder()">Order</li>
+            </ul>
+        </nav>
     </header>
 
-    <main>
-        <div>
-            <h2>Select a Restaurant</h2>
-            <select id="restaurantSelect" onchange="loadMenu()">
-                <option value="">-- Select a Restaurant --</option>
-                <option value="Pizza Place">Pizza Place</option>
-                <option value="Burger Joint">Burger Joint</option>
-                <option value="Pasta House">Pasta House</option>
-                <option value="Dosa House">Dosa House</option>
-                <option value="Biryani Hub">Biryani Hub</option>
-                <option value="Shawarma Corner">Shawarma Corner</option>
-            </select>
-        </div>
+    <!-- Breadcrumbs Section -->
+    <div id="breadcrumbs">Home</div>
 
-        <div id="menu"></div>
+    <!-- Home, Menu, Cart, and Order Confirmation Content -->
+    <div id="homeContent">
+        <h2>Welcome to Food Delivery App!</h2>
+        <p>Your one-stop solution for delicious food delivered to your doorstep.</p>
+        <p>Explore various restaurants and enjoy your favorite dishes!</p>
+    </div>
 
-        <div id="cart">
-            <h2>Cart</h2>
-            <ul id="cartItems"></ul>
-            <p>Total: ₹<span id="totalPrice">0</span></p>
-            <button id="checkoutBtn" onclick="checkout()">Checkout</button>
-        </div>
-    </main>
-
-    <div id="orderConfirmation" class="hidden">
-        <img src="order-placed.jpg" alt="Order Success">
-        <h2>Order Confirmed!</h2>
-        <p>Your delicious meal is on the way!</p>
-        <button onclick="confirmOrder()">Okay</button>
+    <div id="menu" style="display: none;"></div>
+    <div id="cart" style="display: none;">
+        <h2>Your Cart</h2>
+        <ul id="cartItems"></ul>
+        <p id="totalPrice">Total Price: ₹0</p>
+        <button style="background-color: #4CAF50; color: white;" onclick="checkout()">Checkout</button>
+    </div>
+    <div id="orderConfirmation" style="display: none;">
+        <h2>Order Placed!</h2>
+        <div id="orderDetails"></div>
+        <button style="background-color: #4CAF50; color: white;" onclick="confirmOrder()">Confirm Order</button>
     </div>
 
     <script src="script.js"></script>
