--- a/Fooddelivery/food.html
+++ b/Fooddelivery/food.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Food Delivery App</h1>
+        <h1>Food Delivery Website</h1>
         <nav>
             <ul>
                 <li id="homeLink" onclick="showHome()">Home</li>
@@ -23,7 +23,7 @@
 
     <!-- Home, Menu, Cart, and Order Confirmation Content -->
     <div id="homeContent">
-        <h2>Welcome to Food Delivery App!</h2>
+        <h2>Welcome to Food Delivery Website</h2>
         <p>Your one-stop solution for delicious food delivered to your doorstep.</p>
         <p>Explore various restaurants and enjoy your favorite dishes!</p>
     </div>
