--- a/Fooddelivery/food.html
+++ b/Fooddelivery/food.html
@@ -45,7 +45,7 @@
         <h2>Your Cart</h2>
         <ul id="cartItems"></ul>
         <p id="totalPrice">Total Price: ₹0</p>
-        <button style="background-color: #4CAF50; color: white;" onclick="checkout()">Checkout</button>
+        <button style="background-color: black; color: white;" onclick="checkout()">Checkout</button>
     </div>
     <div id="orderConfirmation" style="display: none;">
         <h2>Order Placed!</h2>
