--- a/Fooddelivery/food.html
+++ b/Fooddelivery/food.html
@@ -26,7 +26,7 @@
         <h2>Welcome to Food Delivery Website</h2>
         <p>Your one-stop solution for delicious food delivered to your doorstep.</p>
         <p>Explore various restaurants and enjoy your favorite dishes!</p>
-        <img src="food.jpg" alt="fooddelivery">
+        <img src="food.jpg" alt="Food Delivery">
     </div>
 <div id="menu">
     <h2>Select Restaurant <span style="font-size: 12px;">▼</span></h2>
