--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <body>
 <title>web</title>
 <h1>WELCOME TO MY WEBPAGE</h1>
-  <p>portfolio
-  <a href="https://atchaya250.github.io/atchaya/portfolio/portfolio.html">portfolio</a>details</p>
-  <p>ToDolist<a href="https://atchaya250.github.io/atchaya/todo/todo.html">todolist</a>details</p>
-  <p>Microblog<a href="https://atchaya250.github.io/atchaya/microblogging/micro.html">microblog</a>details</p>
-  <p>Food delivery<a href="https://atchaya250.github.io/atchaya/Fooddelivery/food.html">Food Delivery</a>details</p>
+  <p>Portfolio
+  <a href="https://atchaya250.github.io/atchaya/portfolio/portfolio.html">portfolio</a></p>
+  <p>ToDolist<a href="https://atchaya250.github.io/atchaya/todo/todo.html">todolist</a></p>
+  <p>Microblog<a href="https://atchaya250.github.io/atchaya/microblogging/micro.html">microblog</a></p>
+  <p>Food delivery<a href="https://atchaya250.github.io/atchaya/Fooddelivery/food.html">Food Delivery</a></p>
 </body>
 </html>
