--- a/Fooddelivery/food.html
+++ b/Fooddelivery/food.html
@@ -18,10 +18,15 @@
         </nav>
     </header>
 
-    <!-- Breadcrumbs Section -->
+    
     <div id="breadcrumbs">Home</div>
+    <style>
+     p {
+       background-image: url(food.jpg');
+      }
+     </style>
 
-    <!-- Home, Menu, Cart, and Order Confirmation Content -->
+    
     <div id="homeContent">
         <h2>Welcome to Food Delivery Website</h2>
         <p>Your one-stop solution for delicious food delivered to your doorstep.</p>
