--- a/Fooddelivery/food.html
+++ b/Fooddelivery/food.html
@@ -24,7 +24,7 @@
 
     <div id="homeContent">
         <h2>Welcome to Food Delivery Website</h2>
-        <p>Your one-stop solution for delicious food delivered to your doorstep.</p>
+        <p>Your one-step solution for delicious food delivered to your doorstep.</p>
         <p>Explore various restaurants and enjoy your favorite dishes!</p>
         <img src="food.jpg" alt="Food Delivery">
     </div>
