--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <body>
 <title>web</title>
 <h1>Full stack lab Experiments</h1>
-  <p>Portfolio
+  <p>1.Portfolio
   <a href="https://atchaya250.github.io/atchaya/portfolio/portfolio.html">portfolio</a></p>
-  <p>ToDolist<a href="https://atchaya250.github.io/atchaya/todo/todo.html">todolist</a></p>
-  <p>Microblog<a href="https://atchaya250.github.io/atchaya/microblogging/micro.html">microblog</a></p>
-  <p>Food delivery<a href="https://atchaya250.github.io/atchaya/Fooddelivery/food.html">Food Delivery</a></p>
+  <p>2.ToDolist<a href="https://atchaya250.github.io/atchaya/todo/todo.html">todolist</a></p>
+  <p>3.Microblog<a href="https://atchaya250.github.io/atchaya/microblogging/micro.html">microblog</a></p>
+  <p>4.Food delivery<a href="https://atchaya250.github.io/atchaya/Fooddelivery/food.html">Food Delivery</a></p>
 </body>
 </html>
