--- a/index.html
+++ b/index.html
@@ -1,11 +1,84 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Full Stack Web Development Experiments</title>
+    <style>
+        /* General styling for the entire page */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f8ff;
+            margin: 0;
+            padding: 20px;
+            color: #333;
+        }
+
+        /* Header styling */
+        header {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        .welcome {
+            color: #4CAF50;
+            font-size: 2.5em;
+            margin-bottom: 10px;
+        }
+
+        .title {
+            color: #FF5733;
+            font-size: 2em;
+            margin-bottom: 5px;
+        }
+
+        .info {
+            color: #333;
+            font-size: 1.2em;
+        }
+
+        /* Experiment list styling */
+        .experiment-list h3 {
+            color: #007BFF;
+            font-size: 1.8em;
+        }
+
+        .experiment-list ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        .experiment-list ul li {
+            background-color: #eee;
+            padding: 10px;
+            margin: 5px 0;
+            border-radius: 5px;
+            color: #555;
+        }
+
+        .experiment-list ul li:hover {
+            background-color: #d1ecf1;
+        }
+    </style>
+</head>
 <body>
-<title>web</title>
-<h1>Full stack lab Experiments</h1>
-  <p>1.Portfolio
-  <a href="https://atchaya250.github.io/atchaya/portfolio/portfolio.html">portfolio</a></p>
-  <p>2.ToDolist<a href="https://atchaya250.github.io/atchaya/todo/todo.html">todolist</a></p>
-  <p>3.Microblog<a href="https://atchaya250.github.io/atchaya/microblogging/micro.html">microblog</a></p>
-  <p>4.Food delivery<a href="https://atchaya250.github.io/atchaya/Fooddelivery/food.html">Food Delivery</a></p>
+    <header>
+        <h1 class="welcome">Welcome to My Website</h1>
+        <h2 class="title">Full Stack Web Development Experiments</h2>
+        <p class="info">Atchaya R</p>
+        <p class="info">810022205103</p>
+    </header>
+    
+    <section class="experiment-list">
+        <h3>List of Experiments</h3>
+        <ul>
+            <li>Experiment 1: <p>1.Portfolio<a href="https://atchaya250.github.io/atchaya/portfolio/portfolio.html">portfolio</a></p></li>
+            <li>Experiment 2: <p>2.ToDolist<a href="https://atchaya250.github.io/atchaya/todo/todo.html">todolist</a></p></li>
+            <li>Experiment 3: <p>3.Microblog<a href="https://atchaya250.github.io/atchaya/microblogging/micro.html">microblog</a></p>
+</li>
+            <li>Experiment 4:   <p>4.Food delivery<a href="https://atchaya250.github.io/atchaya/Fooddelivery/food.html">Food Delivery</a></p></li>
+            <li>Experiment 5: </li>
+        </ul>
+    </section>
 </body>
 </html>
