--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <li>Experiment 2: <p>2.ToDolist<a href="https://atchaya250.github.io/atchaya/todo/todo.html">todolist</a></p></li>
             <li>Experiment 3: <p>3.Microblog<a href="https://atchaya250.github.io/atchaya/microblogging/micro.html">microblog</a></p>
 </li>
-            <li>Experiment 4:   <p>4.Food delivery<a href="https://atchaya250.github.io/atchaya/Fooddelivery/food.html">Food Delivery</a></p></li>
+            <li>Experiment 4: Food Delivery <p><a href="https://atchaya250.github.io/atchaya/Fooddelivery/food.html">Food Delivery</a></p></li>
             <li>Experiment 5: </li>
         </ul>
     </section>
