--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
     <section class="experiment-list">
         <h3>List of Experiments</h3>
         <ul>
-            <li>Experiment 1: <p>1.Portfolio<a href="https://atchaya250.github.io/atchaya/portfolio/portfolio.html">portfolio</a></p></li>
-            <li>Experiment 2: <p>2.ToDolist<a href="https://atchaya250.github.io/atchaya/todo/todo.html">todolist</a></p></li>
-            <li>Experiment 3: <p>3.Microblog<a href="https://atchaya250.github.io/atchaya/microblogging/micro.html">microblog</a></p>
+            <li>Experiment 1: Portfolio <p><a href="https://atchaya250.github.io/atchaya/portfolio/portfolio.html">portfolio</a></p></li>
+            <li>Experiment 2: To-do list <p><a href="https://atchaya250.github.io/atchaya/todo/todo.html">to-dolist</a></p></li>
+            <li>Experiment 3: Microblog<p><a href="https://atchaya250.github.io/atchaya/microblogging/micro.html">microblog</a></p>
 </li>
             <li>Experiment 4: Food Delivery <p><a href="https://atchaya250.github.io/atchaya/Fooddelivery/food.html">Food Delivery</a></p></li>
             <li>Experiment 5: </li>
