--- a/Fooddelivery/food.html
+++ b/Fooddelivery/food.html
@@ -24,7 +24,7 @@
         <p>Order delicious meals from top-rated restaurants near you.</p>
         <p>Enjoy fast delivery and a wide selection of cuisines!</p>
         <div class="about-restaurant">
-            <img src="restaurant-about.jpg" alt="About Restaurant" class="restaurant-about-img">
+            <img src="food.jpg" alt="About Restaurant" class="restaurant-about-img">
             <p>We partner with the best restaurants to provide you with a variety of meals. Enjoy fast delivery right to your doorstep!</p>
         </div>
     </section>
