--- a/Fooddelivery/food.html
+++ b/Fooddelivery/food.html
@@ -35,7 +35,7 @@
         <div class="restaurant-card">
             <img src="restaurant1.jpg" alt="Restaurant 1" class="restaurant-img">
             <div class="restaurant-info">
-                <h3>Restaurant One</h3>
+                <h3>Pizza Place</h3>
                 <p>Address: 123 Main St, City</p>
                 <p>Delivery Time: 30-45 min</p>
                 <p>Rating: 4.5/5</p>
@@ -45,7 +45,7 @@
         <div class="restaurant-card">
             <img src="restaurant2.jpg" alt="Restaurant 2" class="restaurant-img">
             <div class="restaurant-info">
-                <h3>Restaurant Two</h3>
+                <h3>Briyani Hub</h3>
                 <p>Address: 456 Park Ave, City</p>
                 <p>Delivery Time: 25-40 min</p>
                 <p>Rating: 4.7/5</p>
@@ -55,7 +55,7 @@
         <div class="restaurant-card">
             <img src="restaurant3.jpg" alt="Restaurant 3" class="restaurant-img">
             <div class="restaurant-info">
-                <h3>Restaurant Three</h3>
+                <h3>Dosa House</h3>
                 <p>Address: 789 Broadway, City</p>
                 <p>Delivery Time: 20-35 min</p>
                 <p>Rating: 4.8/5</p>
