--- a/Fooddelivery/food.html
+++ b/Fooddelivery/food.html
@@ -54,7 +54,7 @@
             </div>
         </div>
         <div class="restaurant-card">
-            <img src="restaurant3.jpg" alt="Restaurant 3" class="restaurant-img">
+            <img src="restaurant3.png" alt="Restaurant 3" class="restaurant-img">
             <div class="restaurant-info">
                 <h3>Dosa House</h3>
                 <p>Address: 789 Broadway, City</p>
