--- a/index.html
+++ b/index.html
@@ -74,10 +74,9 @@
         <ul>
             <li>Experiment 1: Portfolio <p><a href="https://atchaya250.github.io/atchaya/portfolio/portfolio.html">portfolio</a></p></li>
             <li>Experiment 2: To-do list <p><a href="https://atchaya250.github.io/atchaya/todo/todo.html">to-dolist</a></p></li>
-            <li>Experiment 3: Microblog<p><a href="https://atchaya250.github.io/atchaya/microblogging/micro.html">microblog</a></p>
-</li>
+            <li>Experiment 3: Microblog<p><a href="https://atchaya250.github.io/atchaya/microblogging/micro.html">microblog</a></p></li>
             <li>Experiment 4: Food Delivery <p><a href="https://atchaya250.github.io/atchaya/Fooddelivery/food.html">Food Delivery</a></p></li>
-            <li>Experiment 5: </li>
+            <li>Experiment 5: Buy and sell products <p><a href="https://atchaya250.github.io/atchaya/classifieds Web/classifieds.html">Buy and Sell products</a></p></li>
         </ul>
     </section>
 </body>
