--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         .experiment-list ul {
             list-style-type: none;
             padding: 0;
+            text-align: center;
         }
 
         .experiment-list ul li {
