--- a/classifieds Web/classifieds.html
+++ b/classifieds Web/classifieds.html
@@ -9,6 +9,11 @@
 <body>
     <header>
         <h1>Classifieds - Buy and Sell Used Products</h1>
+        <nav>
+            <button id="homeBtn">Home</button>
+            <button id="listingBtn">Product Listing</button>
+            <button id="orderBtn">Order</button>
+        </nav>
         
     </header>
 
