--- a/classifieds Web/classifieds.html
+++ b/classifieds Web/classifieds.html
@@ -17,6 +17,11 @@
     </header>
 
     <!-- Breadcrumb Navigation -->
+    <div id="breadcrumbs">
+        <span id="breadcrumb-home" class="breadcrumb hidden">Home</span>
+        <span id="breadcrumb-listing" class="breadcrumb hidden"> > Product Listing</span>
+        <span id="breadcrumb-order" class="breadcrumb hidden"> > Order</span>
+    </div>
     
 
     <!-- Home Section with Login -->
