--- a/classifieds Web/classifieds.html
+++ b/classifieds Web/classifieds.html
@@ -18,9 +18,9 @@
 
     <!-- Breadcrumb Navigation -->
     <div id="breadcrumbs">
-        <span id="breadcrumb-home" class="breadcrumb hidden">Home</span>
-        <span id="breadcrumb-listing" class="breadcrumb hidden"> > Product Listing</span>
-        <span id="breadcrumb-order" class="breadcrumb hidden"> > Order</span>
+        <span id="breadcrumb-home" class="breadcrumb hidden"></span>
+        <span id="breadcrumb-listing" class="breadcrumb hidden"> > </span>
+        <span id="breadcrumb-order" class="breadcrumb hidden"> > </span>
     </div>
     
 
