--- a/classifieds Web/classifieds.html
+++ b/classifieds Web/classifieds.html
@@ -19,8 +19,8 @@
     <!-- Breadcrumb Navigation -->
     <div id="breadcrumbs">
         <span id="breadcrumb-home" class="breadcrumb hidden"></span>
-        <span id="breadcrumb-listing" class="breadcrumb hidden"> > </span>
-        <span id="breadcrumb-order" class="breadcrumb hidden"> > </span>
+        <span id="breadcrumb-listing" class="breadcrumb hidden"></span>
+        <span id="breadcrumb-order" class="breadcrumb hidden"></span>
     </div>
     
 
